--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<ini-header></ini-header>
+<header>
+    <ini-header></ini-header>
+</header>
+
+<body>
+    <router-outlet></router-outlet>
+</body>
