--- a/src/app/pessoas/pessoas.component.html
+++ b/src/app/pessoas/pessoas.component.html
@@ -3,10 +3,11 @@
     <div class="panel panel-default">
         <div class="panel-heading">Controle de Pessoas</div>
         <div class="panel-body">
-            <button type="button" class="btn btn-primary" [routerLink]="['/pessoas/todos']" >Consultar Todos</button>
-            <p></p>
-            <button type="button" class="btn btn-primary" [routerLink]="['/pessoas/novo']">Cadastrar</button>
+            <button type="button" class="btn btn-primary" [routerLink]="['todos']" >Consultar Todos</button>
+            <button type="button" class="btn btn-primary" [routerLink]="['novo']">Cadastrar</button>
         </div>
     </div>
+
+    <router-outlet></router-outlet>
 
 </section>
